force-app/main/default/objects/Related_Source__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Sources (Account)</relationshipLabel>
    <relationshipName>Related_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>