force-app/main/default/objects/Related_Source__c/fields/Channel_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Id__c</fullName>
    <formula>IF(ISPICKVAL(Lead__r.Lead_source__c, &apos;Channel Partner&apos;), Lead__r.Owner:User.Id, Lead__r.Lead_OwnerSecondary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Id</label>
    <type>Text</type>
</CustomField>