force-app/main/default/objects/Related_Source__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Sources</relationshipLabel>
    <relationshipName>Related_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>