force-app/main/default/objects/Related_Source__c/fields/Is_OTP_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_OTP_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OTP Active</label>
    <type>Checkbox</type>
</CustomField>