force-app/main/default/objects/Related_Source__c/fields/Is_Send_OTP__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_OTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Send OTP</label>
    <type>Checkbox</type>
</CustomField>