force-app/main/default/objects/Related_Source__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Enquiry Sources</relationshipLabel>
    <relationshipName>Enquiry_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>