force-app/main/default/objects/Related_Source__c/fields/PhoneProject__c.field-meta.xml
<CustomField>
    <fullName>PhoneProject__c</fullName>
    <formula>IF(NOT(ISBLANK(Phone__c)),Phone__c+TEXT(Lead__r.Allocated_Project__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PhoneProject</label>
    <type>Text</type>
</CustomField>