force-app/main/default/objects/Related_Source__c/fields/SCampaign__c.field-meta.xml
<CustomField>
    <fullName>SCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Enquiry Sources</relationshipLabel>
    <relationshipName>Enquiry_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>