force-app/main/default/objects/Related_Source__c/fields/Source_OTP__c.field-meta.xml
<CustomField>
    <fullName>Source_OTP__c</fullName>
    <label>Source OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>